update footer media

--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
     <section class="carousel-team">
         <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+
+
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
@@ -240,8 +242,10 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
                 </div>
+
+
                 <div class="carousel-inner">
-                    <div class="carousel-item active carousel-team__wrapper row" data-bs-interval="4000">
+                    <div class="carousel-item active carousel-team__wrapper row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo"
                                  title="one of our team">
@@ -262,7 +266,7 @@
 
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="4000">
+                    <div class="carousel-item carousel-team__wrapper row">
                         <div class="col-12 col-md-6 col-lg-4 ">
                             <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo"
                                  title="one of our team">
@@ -282,7 +286,7 @@
                             <p class="carousel-team__caption-post">Пайовий партнер, адвокат</p>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row" data-bs-interval="4000">
+                    <div class="carousel-item carousel-team__wrapper row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">
                         </div>
@@ -301,7 +305,11 @@
                             <p class="carousel-team__caption-post">Юрист, адвокат</p>
                         </div>
                     </div>
+                    data-bs-interval="4000"
+
                 </div>
+
+
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -419,13 +427,13 @@
                 <a href="https://www.google.com/maps/place/%D0%9F%D0%B0%D0%BC'%D1%8F%D1%82%D0%BD%D0%B8%D0%BA+%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%B0%D0%BC+%D1%82%D0%B5%D1%80%D0%BE%D1%80%D0%B8%D0%B7%D0%BC%D1%83/@50.4366698,30.5323592,20.36z/data=!4m13!1m7!3m6!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a!2z0LLRg9C70LjRhtGPINCc0LXRh9C90LjQutC-0LLQsCwgMTQvMSwg0JrQuNGX0LIsIDAyMDAw!3b1!8m2!3d50.436795!4d30.532705!3m4!1s0x40d4cf00d47ca801:0x83be22c2a2ec8095!8m2!3d50.4368159!4d30.532211"
                    class="footer__wrapper-address-link" target="_blank">on map</a>
             </address>
-            <div class="footer__wrapper-copy d-flex justify-content-end align-items-center">
+            <div class="footer__wrapper-copy d-flex align-items-center">
                 © 2021 HLEGAL Law company, LLC
             </div>
             <div class="footer__wrapper-contact d-flex">
                 <div class="footer__social">
                     <a target="_blank" href="https://www.facebook.com/">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        <svg width="38" height="38" viewBox="0 0 24 24" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
                             <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z"
                                   fill="#B3B3BA"/>
