updated the slider and some more blocks

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h1>you legal solutions provider</h1>
             </div>
             <a href="#ancor" class="banner__scroll">
-                <svg id="ancor" xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42"
+                <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42"
                      fill="none">
                     <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
                     <path d="M12 18L21 27L30 18" stroke="white" stroke-width="2"/>
@@ -105,9 +105,9 @@
             </a>
         </section>
         <section class="menu-scroll">
-            <div class="container">
-                <div class="row menu-scroll__media-horizon">
-                    <div class="col-12 col-md-4 ">
+            <div class="container-sm">
+                <div class="row menu-scroll__media-horizon" id="ancor">
+                    <div class="col-12 col-lg-5 menu-scroll__left">
                         <div class="list-group" id="list-tab" role="tablist">
                             <a class="list-group-item list-group-item-action active" id="list-home-list"
                                data-bs-toggle="list" href="#list-home" role="tab"
@@ -123,11 +123,11 @@
                                 oriented</a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-1 separating-line d-flex justify-content-center">
+                    <div class="col-12 col-lg-1 separating-line d-flex justify-content-center">
                         <div class="vr"></div>
                         <hr>
                     </div>
-                    <div class="col-12 col-md-7">
+                    <div class="col-12 col-lg-6 menu-scroll__right">
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="list-home" role="tabpanel"
                                  aria-labelledby="list-home-list">
@@ -185,43 +185,43 @@
                     <h3>What can we do better than others?</h3>
                 </div>
                 <div class="row our-service__info-columns">
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-1.svg" alt="picture">
-                        <h3>IT and e-commerce</h3>
+                        <a href="#">IT and e-commerce</a>
                         <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work
                             distracts you from doing business. But there is not much work to do to hire an in-house
                             lawyer.</p>
                     </div>
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-2.svg" alt="picture">
-                        <h3>Comprehensive daily legal support</h3>
+                        <a href="#">Comprehensive daily legal support</a>
                         <p>In addition, over time, the work will become the same type and uninteresting for a full-time
                             lawyer. And we know very well how difficult it is to find a good candidate with experience
                             in the field of information technology in Ukraine.</p>
                     </div>
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-3.svg" alt="picture">
-                        <h3>Structuring corporate relationships</h3>
+                        <a href="#">Structuring corporate relationships</a>
                         <p>Instead of just providing legal services, we will hire a lawyer or a whole team that will fit
                             into the daily life of your company.</p>
                     </div>
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-4.svg" alt="picture">
-                        <h3>Building contractual relations</h3>
+                        <a href="#">Building contractual relations</a>
                         <p>Once a week, or week after month, you have your own lawyer by your side. Anyone in the
                             company can catch it at the coffee maker and just talk about current affairs instead of
                             waiting for update status.</p>
                     </div>
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-5.svg" alt="picture">
-                        <h3>Protection of business, intellectual property</h3>
+                        <a href="#">Protection of business, intellectual property</a>
                         <p>And all the other time he will work on new diverse projects, so he will definitely not stop
                             in professional development. One way or another, all Axon Partners will work for you instead
                             of a corporate lawyer.</p>
                     </div>
-                    <div class="col-12 col-md-4 col-lg-3 ">
+                    <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-6.svg" alt="picture">
-                        <h3>Judicial representation</h3>
+                        <a href="#">Judicial representation</a>
                         <p>Is it a small, medium-sized company or a market leader? Local business or multinational
                             company? Do you have your own legal department or not?</p>
                     </div>
@@ -230,27 +230,23 @@
         </section>
     </div>
     <section class="carousel-team">
-        <div class="container">
+        <div class="container-lg">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-
-
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
+                            aria-current="true" aria-label="Slide 1" data-bs-interval="4000"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
+                            aria-label="Slide 2" data-bs-interval="4000"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                            aria-label="Slide 3" data-bs-interval="4000"></button>
                 </div>
-
-
                 <div class="carousel-inner">
-                    <div class="carousel-item active carousel-team__wrapper row">
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <img src="assets/img/team/Alexander.png" class="photo-team" alt="photo"
-                                 title="one of our team">
+                    <div class="carousel-item active">
+                        <div class="carousel-team__photo">
+                            <div class="photo-team photo-team-1"></div>
+                            <!--                            <img src="assets/img/team/Alexander.png" class=" " alt="photo" title="one of our team">-->
                         </div>
-                        <div class="col-12 col-md-6 col-lg-8 carousel-team__caption">
+                        <div class="carousel-team__inner-info col">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -258,20 +254,20 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                            <p class="carousel-team__inner-info-description">Ми звикли брати на себе відповідальність та
                                 завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
-                            <p class="carousel-team__caption-name">Олександр Олександровський</p>
-                            <p class="carousel-team__caption-post">Керуючий партнер</p>
+                            <p class="carousel-team__inner-info-name">Олександр Олександровський</p>
+                            <p class="carousel-team__inner-info-post">Керуючий партнер</p>
 
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row">
-                        <div class="col-12 col-md-6 col-lg-4 ">
-                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo"
-                                 title="one of our team">
+                    <div class="carousel-item ">
+                        <div class="carousel-team__photo">
+                            <div class="photo-team photo-team-2"></div>
+                            <!--                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo" title="one of our team">-->
                         </div>
-                        <div class="col-12 col-md-6 col-lg-8  carousel-team__caption">
+                        <div class="  carousel-team__inner-info col">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -279,18 +275,19 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                            <p class="carousel-team__inner-info-description">Ми звикли брати на себе відповідальність та
                                 завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
-                            <p class="carousel-team__caption-name"> Евгений Патриков</p>
-                            <p class="carousel-team__caption-post">Пайовий партнер, адвокат</p>
+                            <p class="carousel-team__inner-info-name"> Евгений Патриков</p>
+                            <p class="carousel-team__inner-info-post">Пайовий партнер, адвокат</p>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-team__wrapper row">
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">
+                    <div class="carousel-item ">
+                        <div class="carousel-team__photo">
+                            <div class="photo-team photo-team-3"></div>
+                            <!--                            <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">-->
                         </div>
-                        <div class="col-12 col-md-6 col-lg-8 carousel-team__caption">
+                        <div class=" carousel-team__inner-info col">
                             <a href="#">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
@@ -298,18 +295,14 @@
                                     <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                                 </svg>
                             </a>
-                            <p class="carousel-team__caption-description">Ми звикли брати на себе відповідальність та
+                            <p class="carousel-team__inner-info-description">Ми звикли брати на себе відповідальність та
                                 завжди гарантуємо чесну, вчасну допомогу,
                                 навіть у ситуаціях, коли більшість безсилі.</p>
-                            <p class="carousel-team__caption-name">Юлія Волк</p>
-                            <p class="carousel-team__caption-post">Юрист, адвокат</p>
+                            <p class="carousel-team__inner-info-name">Юлія Волк</p>
+                            <p class="carousel-team__inner-info-post">Юрист, адвокат</p>
                         </div>
                     </div>
-                    data-bs-interval="4000"
-
                 </div>
-
-
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
