--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active">about us</a>
+                                <a class="nav-link">about us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link">services</a>
@@ -244,7 +244,6 @@
                     <div class="carousel-item active">
                         <div class="carousel-team__photo">
                             <div class="photo-team photo-team-1"></div>
-                            <!--                            <img src="assets/img/team/Alexander.png" class=" " alt="photo" title="one of our team">-->
                         </div>
                         <div class="carousel-team__inner-info col">
                             <a href="#">
@@ -265,7 +264,6 @@
                     <div class="carousel-item ">
                         <div class="carousel-team__photo">
                             <div class="photo-team photo-team-2"></div>
-                            <!--                            <img src="assets/img/team/Evgeny.png" class="photo-team" alt="photo" title="one of our team">-->
                         </div>
                         <div class="  carousel-team__inner-info col">
                             <a href="#">
@@ -285,7 +283,6 @@
                     <div class="carousel-item ">
                         <div class="carousel-team__photo">
                             <div class="photo-team photo-team-3"></div>
-                            <!--                            <img src="assets/img/team/Julia.png" class="photo-team" alt="photo" title="one of our team">-->
                         </div>
                         <div class=" carousel-team__inner-info col">
                             <a href="#">
@@ -360,7 +357,7 @@
         </div>
     </section>
     <section class="articles">
-        <div class="container">
+        <div class="container-lg">
             <div class="articles__heading">
                 <a href="#" class="articles__heading-link">
                     publications
@@ -372,7 +369,9 @@
             </div>
             <div class="articles__wrapper d-flex">
                 <div class="articles__wrapper-card">
-                    <img src="./assets/img/publication/Publication-1.png" class="" alt="">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-1"></div>
+                    </div>
                     <div class="articles__wrapper-card-wrap">
                         <h4 class="articles__wrapper-card-wrap-title">Equity associate</h4>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
@@ -384,7 +383,9 @@
                     </div>
                 </div>
                 <div class="articles__wrapper-card">
-                    <img src="./assets/img/publication/Publication-2.png" class="" alt="">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-2"></div>
+                    </div>
                     <div class="articles__wrapper-card-wrap">
                         <h4 class="articles__wrapper-card-wrap-title">Penalty for the Good Corporation: what will happen
                             to Google and others for violating the
@@ -397,7 +398,9 @@
                     </div>
                 </div>
                 <div class="articles__wrapper-card">
-                    <img src="./assets/img/publication/Publication-3.png" class="" alt="">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-3"></div>
+                    </div>
                     <div class="articles__wrapper-card-wrap">
                         <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
@@ -412,7 +415,7 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="container">
+    <div class="container-lg">
         <div class="footer__line"></div>
         <div class="footer__wrapper d-flex">
             <address class="footer__wrapper-address d-flex align-items-center m-0">
