--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="#" target="_blank">
+                    <a class="navbar-brand" href="./index.html" target="_blank">
                         <img class="img-fluid logo-shadow" src="assets/img/Logo.svg" alt="logo-top">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -69,7 +69,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link">about us</a>
+                                <a class="nav-link" href="./html/about-us.html">about us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link">services</a>
