--- a/html/about-us.html
+++ b/html/about-us.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -160,7 +160,117 @@
                     <p> It's simple. If you are unhappy with our work, we will refund your money. We trust our clients.
                         And we want our clients to trust us too.</p>
                 </div>
-                <div class="ending-title">Quality is what we care about the most.</div>
+                <div class="ending__title">Quality is what we care about the most.</div>
+            </div>
+        </div>
+    </section>
+    <section class="achievements">
+        <div class="container-lg">
+            <h3 class="achievements__title">achievements</h3>
+            <div class="achievements__wrapper d-flex">
+                <div class="achievements__slider carousel slide" id="carouselExampleCaptions">
+                    <div class="carousel-inner ">
+                        <div class="carousel-item active">
+                            <a class="achievements-img" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="carousel-item">
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img " href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
+                            </a>
+                            <a class="achievements-img" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
+                            </a>
+                            <a class="achievements-img media-hidden" href="#">
+                                <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1" data-bs-interval="4000"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2" data-bs-interval="4000"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3" data-bs-interval="4000"></button>
+                        <button class="media-hidden-indicators" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                                aria-label="Slide 4" data-bs-interval="4000"></button>
+                        <button class="media-hidden-indicators" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                                aria-label="Slide 5" data-bs-interval="4000"></button>
+                        <button class="media-hidden-indicators" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                                aria-label="Slide 6" data-bs-interval="4000"></button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
