update block about-us

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -170,7 +170,7 @@
             <div class="achievements__wrapper d-flex">
                 <div class="achievements__slider carousel slide" id="carouselExampleCaptions">
                     <div class="carousel-inner ">
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <a class="achievements-img" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
                             </a>
@@ -212,7 +212,6 @@
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
                             </a>
                         </div>
-
                         <div class="carousel-item">
                             <a class="achievements-img media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
@@ -241,17 +240,17 @@
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
                             </a>
                         </div>
-                        <div class="carousel-item">
-                            <a class="achievements-img media-hidden" href="#">
+                        <div class="carousel-item active">
+                            <a class="achievements-img ce media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
                             </a>
-                            <a class="achievements-img media-hidden" href="#">
+                            <a class="achievements-img ve media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
                             </a>
-                            <a class="achievements-img" href="#">
+                            <a class="achievements-img be" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
                             </a>
-                            <a class="achievements-img media-hidden" href="#">
+                            <a class="achievements-img xe media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
                             </a>
                         </div>
