--- a/html/about-us.html
+++ b/html/about-us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/about-us.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
-    <link rel="stylesheet" href="../scss/components/header/header-media.scss">
+<!--    <link rel="stylesheet" href="../scss/components/header/header-media.scss">-->
 </head>
 <body>
 <header class="header">
@@ -75,16 +75,16 @@
                                 <a class="nav-link" href="../html/about-us.html">about us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">services</a>
+                                <a class="nav-link" href="../html/services.html">services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">team</a>
+                                <a class="nav-link" href="../html/team-all.html">team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">publications</a>
+                                <a class="nav-link" href="../html/publication.html">publications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">contact</a>
+                                <a class="nav-link" href="../html/contact.html">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -241,16 +241,16 @@
                             </a>
                         </div>
                         <div class="carousel-item active">
-                            <a class="achievements-img ce media-hidden" href="#">
+                            <a class="achievements-img media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-1.png" alt="">
                             </a>
-                            <a class="achievements-img ve media-hidden" href="#">
+                            <a class="achievements-img media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-2.png" alt="">
                             </a>
-                            <a class="achievements-img be" href="#">
+                            <a class="achievements-img " href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-3.png" alt="">
                             </a>
-                            <a class="achievements-img xe media-hidden" href="#">
+                            <a class="achievements-img media-hidden" href="#">
                                 <img class="img-fluid" src="../assets/img/Achievment/Achievment-4.png" alt="">
                             </a>
                         </div>
@@ -274,7 +274,39 @@
         </div>
     </section>
 </main>
-<footer></footer>
+<footer class="footer">
+    <div class="container-lg">
+        <div class="footer__line"></div>
+        <div class="footer__wrapper d-flex">
+            <address class="footer__wrapper-address d-flex align-items-center m-0">
+                <p class="footer__wrapper-address-text">Kyiv, Mechnikova str, 14/1</p>
+                <a href="https://www.google.com/maps/place/%D0%9F%D0%B0%D0%BC'%D1%8F%D1%82%D0%BD%D0%B8%D0%BA+%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%B0%D0%BC+%D1%82%D0%B5%D1%80%D0%BE%D1%80%D0%B8%D0%B7%D0%BC%D1%83/@50.4366698,30.5323592,20.36z/data=!4m13!1m7!3m6!1s0x40d4cf07295b8e39:0x17b2112e2dc0e7a!2z0LLRg9C70LjRhtGPINCc0LXRh9C90LjQutC-0LLQsCwgMTQvMSwg0JrQuNGX0LIsIDAyMDAw!3b1!8m2!3d50.436795!4d30.532705!3m4!1s0x40d4cf00d47ca801:0x83be22c2a2ec8095!8m2!3d50.4368159!4d30.532211"
+                   class="footer__wrapper-address-link" target="_blank">on map</a>
+            </address>
+            <div class="footer__wrapper-copy d-flex align-items-center">
+                © 2021 HLEGAL Law company, LLC
+            </div>
+            <div class="footer__wrapper-contact d-flex">
+                <div class="footer__social">
+                    <a target="_blank" href="https://www.facebook.com/">
+                        <svg width="38" height="38" viewBox="0 0 24 24" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z"
+                                  fill="#B3B3BA"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="footer__number">
+                    <a href="tel:0800 211 927">0800 211 927</a>
+                </div>
+                <div class="footer__email">
+                    <a href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
