--- a/html/about-us.html
+++ b/html/about-us.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/about-us.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
-<!--    <link rel="stylesheet" href="../scss/components/header/header-media.scss">-->
 </head>
 <body>
 <header class="header">
@@ -72,7 +71,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="../html/about-us.html">about us</a>
+                                <a class="nav-link active" href="../html/about-us.html">about us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../html/services.html">services</a>
