--- a/html/team-all.html
+++ b/html/team-all.html
@@ -7,10 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Team</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/about-us.css">
     <link rel="stylesheet" href="../css/team-all.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
-    <!--    <link rel="stylesheet" href="../scss/components/header/header-media.scss">-->
 </head>
 <body>
 <header class="header">
@@ -79,7 +77,7 @@
                                 <a class="nav-link" href="../html/services.html">services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../html/team-all.html">team</a>
+                                <a class="nav-link active" href="../html/team-all.html">team</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../html/publication.html">publications</a>
@@ -120,7 +118,9 @@
                     <img src="../assets/img/team/Evgeny.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Евгений Патриков</a>
+                            <a class="team-info__personal-info-name">
+<!--                               href="../html/team-person-1.html"-->
+                            Евгений Патриков</a>
                             <p class="team-info__personal-info-post">Equity partner, Attorney-at-law</p>
                         </div>
                         <a class="team-info__ellipse d-flex"  href="../html/team-person-1.html">
