--- a/html/team-person-1.html
+++ b/html/team-person-1.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Team person</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/about-us.css">
     <link rel="stylesheet" href="../css/team-all.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
 </head>
@@ -78,7 +77,7 @@
                                 <a class="nav-link" href="../html/services.html">services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../html/team-all.html">team</a>
+                                <a class="nav-link active" href="../html/team-all.html">team</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../html/publication.html">publications</a>
@@ -94,20 +93,55 @@
     </div>
 </header>
 <main>
+
     <section class="first-person">
         <div class="container-lg">
             <div class="first-person__wrapper d-flex">
-                <img src="../assets/img/team/Alexander.png" alt="picture team">
+
+                <img class="first-person__img" src="../assets/img/team/Alexander.png" alt="picture team">
                 <div class="first-person__inner-wrapper">
-                    <h2 class="first-person__title">Oksana Kobzar</h2>
+
                     <div class="first-person__info-link d-flex">
-                        <p>Equity partner, Attorney-at-law</p>
-                        <a href="mailto:kobzar@forstudy.space">kobzar@forstudy.space</a>
-                        <a href="#">LinkedIn profile</a>
+                        <h2 class="first-person__name">Oksana Kobzar</h2>
+                        <div class="first-person__info-link-media d-flex">
+                            <p>Equity partner, Attorney-at-law</p>
+                            <a href="mailto:kobzar@forstudy.space">kobzar@forstudy.space</a>
+                            <a href="#">LinkedIn profile</a>
+                        </div>
                     </div>
-                    <hr>
+                    <div class="first-person__info-text">
+                        <hr>
+                        <p>Oksana heads the practice of international trade and shipping. He specializes in resolving
+                            disputes related to the purchase and sale of raw materials and transportation of goods by
+                            sea.</p>
+                        <p>Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
+                            agents, container lines, as well as international banks and P&I clubs.</p>
+                        <h4>Education</h4>
+                        <p>National University "Odessa Law Academy", Master of Law.</p>
+                        <h4>Experience</h4>
+                        <p>Her professional experience includes resolving disputes under English law and representing
+                            interests in foreign commercial arbitrations such as GAFTA, FOSFA and LMAA. Danilo also
+                            represents the interests of clients in the state courts of Ukraine on similar disputes, as
+                            well as in the ICAC and IAC at the CCI of Ukraine</p>
+                    </div>
                 </div>
             </div>
+            <div class="first-person__info-d-none">
+                <hr>
+                <p>Oksana heads the practice of international trade and shipping. He specializes in resolving
+                    disputes related to the purchase and sale of raw materials and transportation of goods by
+                    sea.</p>
+                <p>Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
+                    agents, container lines, as well as international banks and P&I clubs.</p>
+                <h4>Education</h4>
+                <p>National University "Odessa Law Academy", Master of Law.</p>
+                <h4>Experience</h4>
+                <p>Her professional experience includes resolving disputes under English law and representing
+                    interests in foreign commercial arbitrations such as GAFTA, FOSFA and LMAA. Danilo also
+                    represents the interests of clients in the state courts of Ukraine on similar disputes, as
+                    well as in the ICAC and IAC at the CCI of Ukraine</p>
+            </div>
+
         </div>
     </section>
 </main>
