--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="shortcut icon" href="assets/img/h.svg" type="image/svg">
-    <link rel="stylesheet" href="scss/components/header/header-media.scss">
+<!--    <link rel="stylesheet" href="scss/components/header/header-media.scss">-->
 </head>
 <body>
 <header class="header" id="down">
