--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/about-us.html">about us</a>
+                                <a class="nav-link" href="html/about-us.html">about us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/services.html">services</a>
+                                <a class="nav-link" href="html/services.html">services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/team-all.html">team</a>
+                                <a class="nav-link" href="html/team-all.html">team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/publication.html">publications</a>
+                                <a class="nav-link" href="html/publication.html">publications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/contact.html">contact</a>
+                                <a class="nav-link" href="html/contact.html">contact</a>
                             </li>
                         </ul>
                     </div>
