--- a/html/team-person-1.html
+++ b/html/team-person-1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/team-all.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
 </head>
-<body>
+<body class="team-first-person">
 <header class="header">
     <div class="header-content-wrapper">
         <div class="header__top">
@@ -53,7 +53,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="../index.html" target="_blank">
+                    <a class="navbar-brand" href="../index.html" target="_self">
                         <img class="img-fluid logo-shadow" src="../assets/img/about-us/logo_about-us.png" alt="logo-top"
                              title="logo-brand">
                         <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
@@ -93,33 +93,30 @@
     </div>
 </header>
 <main>
-
     <section class="first-person">
         <div class="container-lg">
             <div class="first-person__wrapper d-flex">
-
                 <img class="first-person__img" src="../assets/img/team/Alexander.png" alt="picture team">
                 <div class="first-person__inner-wrapper">
-
                     <div class="first-person__info-link d-flex">
                         <h2 class="first-person__name">Oksana Kobzar</h2>
-                        <div class="first-person__info-link-media d-flex">
-                            <p>Equity partner, Attorney-at-law</p>
-                            <a href="mailto:kobzar@forstudy.space">kobzar@forstudy.space</a>
-                            <a href="#">LinkedIn profile</a>
+                        <div class="first-person__link-inner d-flex">
+                            <p class="first-person__link-post" href="#">Equity partner, Attorney-at-law</p>
+                            <a class="first-person__link-mail" href="mailto:kobzar@forstudy.space">kobzar@forstudy.space</a>
+                            <a class="first-person__link-li" href="#">LinkedIn profile</a>
                         </div>
                     </div>
-                    <div class="first-person__info-text">
-                        <hr>
-                        <p>Oksana heads the practice of international trade and shipping. He specializes in resolving
+                    <div class="first-person__info-wrapper">
+                        <hr class="grey-line">
+                        <p class="first-person__info-text">Oksana heads the practice of international trade and shipping. He specializes in resolving
                             disputes related to the purchase and sale of raw materials and transportation of goods by
                             sea.</p>
-                        <p>Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
+                        <p class="first-person__info-text">Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
                             agents, container lines, as well as international banks and P&I clubs.</p>
-                        <h4>Education</h4>
-                        <p>National University "Odessa Law Academy", Master of Law.</p>
-                        <h4>Experience</h4>
-                        <p>Her professional experience includes resolving disputes under English law and representing
+                        <h4 class="first-person__info-way">Education</h4>
+                        <p class="first-person__info-text">National University "Odessa Law Academy", Master of Law.</p>
+                        <h4 class="first-person__info-way">Experience</h4>
+                        <p class="first-person__info-text">Her professional experience includes resolving disputes under English law and representing
                             interests in foreign commercial arbitrations such as GAFTA, FOSFA and LMAA. Danilo also
                             represents the interests of clients in the state courts of Ukraine on similar disputes, as
                             well as in the ICAC and IAC at the CCI of Ukraine</p>
@@ -127,16 +124,16 @@
                 </div>
             </div>
             <div class="first-person__info-d-none">
-                <hr>
-                <p>Oksana heads the practice of international trade and shipping. He specializes in resolving
+                <hr class="grey-line">
+                <p class="first-person__info-text">Oksana heads the practice of international trade and shipping. He specializes in resolving
                     disputes related to the purchase and sale of raw materials and transportation of goods by
                     sea.</p>
-                <p>Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
+                <p class="first-person__info-text">Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping
                     agents, container lines, as well as international banks and P&I clubs.</p>
-                <h4>Education</h4>
-                <p>National University "Odessa Law Academy", Master of Law.</p>
-                <h4>Experience</h4>
-                <p>Her professional experience includes resolving disputes under English law and representing
+                <h4 class="first-person__info-way">Education</h4>
+                <p class="first-person__info-text">National University "Odessa Law Academy", Master of Law.</p>
+                <h4 class="first-person__info-way">Experience</h4>
+                <p class="first-person__info-text">Her professional experience includes resolving disputes under English law and representing
                     interests in foreign commercial arbitrations such as GAFTA, FOSFA and LMAA. Danilo also
                     represents the interests of clients in the state courts of Ukraine on similar disputes, as
                     well as in the ICAC and IAC at the CCI of Ukraine</p>
