--- a/html/about-us.html
+++ b/html/about-us.html
@@ -53,7 +53,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="../index.html" target="_blank">
+                    <a class="navbar-brand" href="../index.html" target="_self">
                         <img class="img-fluid logo-shadow" src="../assets/img/about-us/logo_about-us.png" alt="logo-top"
                              title="logo-brand">
                         <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
