--- a/html/services-entry.html
+++ b/html/services-entry.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <title>Services-entry</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/services.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
 </head>
 <body>
@@ -54,10 +54,9 @@
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
                     <a class="navbar-brand" href="../index.html" target="_self">
-                        <img class="img-fluid logo-shadow" src="../assets/img/about-us/logo_about-us.png" alt="logo-top"
-                             title="logo-brand">
+                        <img class="img-fluid logo-shadow" src="../assets/img/Logo.svg" alt="logo-top">
                         <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
-                        <span class="navbar-brand-way">contact</span>
+                        <span class="navbar-brand-way">Services</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -74,7 +73,7 @@
                                 <a class="nav-link" href="../html/about-us.html">about us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../html/services.html">services</a>
+                                <a class="nav-link active" href="../html/services.html">services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../html/team-all.html">team</a>
@@ -83,7 +82,7 @@
                                 <a class="nav-link" href="../html/publication.html">publications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="../html/contact.html">contact</a>
+                                <a class="nav-link" href="../html/contact.html">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -93,49 +92,118 @@
     </div>
 </header>
 <main>
-
-    <section class="contact">
-        <div class="container-lg">
-            <div class="contact__wrapper d-flex">
-                <div class="contact__info d-flex flex-column">
-                    <a class="contact__info-address"
-                       href="https://www.google.com.ua/maps/place/%D0%9F%D0%B0%D0%BC'%D1%8F%D1%82%D0%BD%D0%B8%D0%BA+%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%B0%D0%BC+%D1%82%D0%B5%D1%80%D0%BE%D1%80%D0%B8%D0%B7%D0%BC%D1%83/@50.436796,30.531956,20.86z/data=!4m13!1m7!3m6!1s0x40d4cf00d4d55dad:0x40f274cb5d991e55!2zUHlhbSd5YXRueWsgWmhlcnR2YW0gVGVyb3J5em11LCDQn9C-0LHQu9C40LfRgyDRgdGC0LDQvdGG0ZbRlyDQvNC10YLRgNC-INCa0LvQvtCy0YHRjNC60LAsINCy0YPQu9C40YbRjyDQnNC10YfQvdC40LrQvtCy0LAsIDE0LzEsINCa0LjRl9CyLCAwMTAyMw!3b1!8m2!3d50.4368601!4d30.5321067!3m4!1s0x40d4cf00d47ca801:0x83be22c2a2ec8095!8m2!3d50.4368159!4d30.532211?hl=ru">
-                        Kyiv,<br>Mechnikova str, 14</a>
-                    <hr class="horizontal-line">
-                    <a class="contact__info-phone" href="tel:0800 211 927">0800 211 927</a>
-                    <a class="contact__info-mail" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
-                    <hr class="horizontal-line">
-                    <div class="contact__info-social d-flex">
-                        <a class="contact__info-icon" href="https://www.facebook.com/" target="_blank">
-                            <svg width="38" height="38" viewBox="0 0 24 24" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z"
-                                      fill="#B3B3BA"/>
-                            </svg>
-                        </a>
-                        <p>Our page <br>on facebook</p>
+    <div class="bg-gradient">
+        <section class="service-info">
+            <div class="container-lg">
+                <div class="service-info__wrapper ">
+                    <div class="service-info__first-block d-center d-flex">
+                        <img src="../assets/img/our-services/icon-1.svg" alt="icon-services">
+                        <h3 class="service-info__title">IT and e-commerce</h3>
+                        <p class="service-info__text"> An endless stream of contracts, tax issues, labor relations, corporate papers - legal work
+                            distracts
+                            you
+                            from doing business. But there is not much work to do to hire an in-house lawyer.
+                        </p>
+                        <p class="service-info__text">
+                            In addition, over time, the work will become the same type and uninteresting for a full-time
+                            lawyer.
+                            And
+                            we know very well how difficult it is to find a good candidate with experience in the field
+                            of
+                            information technology in Ukraine.
+                        </p>
+                        <button class="btn">Free consultation</button>
+                    </div>
+                    <div class="service-info__second-block">
+                        <hr class="grey-line">
+                        <h4 class="service-info__second-block-title">Services in this area:</h4>
+                        <div class="service-info__second-block-inner d-flex">
+                            <ul>
+                                <li>support of investment projects for the development of port infrastructure;</li>
+                                <li>certification of GTS, entering information about them in mandatory databases and
+                                    registers;
+                                </li>
+                                <li>registration of permits for the construction of port terminals;</li>
+                                <li>registration of permit and other mandatory documentation required for carrying out
+                                    activities in the port (emission permit, conclusion on EIA, RTC, etc.);
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>support of procedures related to the lease of state property in the port;</li>
+                                <li>support of procedures related to confirmation of the status of port operator,
+                                    maritime agent, foreign sailing line;
+                                </li>
+                                <li>support of procedures related to the inclusion of the company within the port;</li>
+                                <li>appeals against actions related to the illegal imposition of services in the port by
+                                    monopoly companies.
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="contact__wrapper-form">
-                    <form class="contact__inner-wrapper d-flex flex-column" action="#">
-                        <h3 class="form-title">We would like to help you</h3>
-                        <label for="name"></label>
-                        <input class="form-name" id="name" type="text" placeholder="Name">
-                        <label for="massage"></label>
-                        <textarea class="form-massage" id="massage" placeholder="Message"></textarea>
 
-                        <h3 class="form-text">How to answer you?</h3>
-                        <label for="phone"></label>
-                        <input class="form-phone" type="number" placeholder="Phone number" id="phone">
-                        <label for="mail"></label>
-                        <input class="form-mail" type="email" placeholder="Email" name="mail" id="mail">
-                        <button class="form-btn btn" type="submit">Send message</button>
-                    </form>
+            </div>
+        </section>
+    </div>
+    <section class="articles">
+        <div class="container-lg">
+            <div class="articles__heading">
+                <a href="#" class="articles__heading-link">
+                    publications
+                    <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
+                    </svg>
+                </a>
+                <h3 class="articles__heading-title">We have something to tell </h3>
+            </div>
+            <div class="articles__wrapper d-flex">
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-1"></div>
+                    </div>
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Equity associate</h4>
+                        <p class="articles__wrapper-card-wrap-data">April 22</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">I'm a jun on projects. I am a co-owner of a law
+                            firm. How it happened. Before entering my
+                            parents
+                            told me that if I…</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-2"></div>
+                    </div>
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Penalty for the Good Corporation: what will happen
+                            to Google and others for violating the
+                            GDPR</h4>
+                        <p class="articles__wrapper-card-wrap-data">September 29</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">And why the recovery of 50 million euros could be a
+                            fateful precedent According to Mind.ua
+                            January 21 National Commission for Data Protection.</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-3"></div>
+                    </div>
+                    <div class="articles__wrapper-card-wrap">
+                        <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
+                        <p class="articles__wrapper-card-wrap-data">August 19</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
+                            crypto-millionaires will inherit A typical
+                            legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 </main>
+
 <footer class="footer">
     <div class="container-lg">
         <div class="footer__line"></div>
