--- a/html/services.html
+++ b/html/services.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/services.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
 </head>
-<body>
+<body class="services">
 <header class="header">
     <div class="header-content-wrapper">
         <div class="header__top">
@@ -53,7 +53,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="../index.html" target="_blank">
+                    <a class="navbar-brand" href="../index.html" target="_self">
                         <img class="img-fluid logo-shadow" src="../assets/img/Logo.svg" alt="logo-top">
                         <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
                         <span class="navbar-brand-way">Services</span>
@@ -96,47 +96,46 @@
         <section class="our-service">
             <div class="container">
                 <div class="our-service__description">
-
                     <h3>What can we do better than others?</h3>
                 </div>
                 <div class="row our-service__info-columns">
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-1.svg" alt="picture">
-                        <a href="#">IT and e-commerce</a>
+                        <a href="../html/services-entry.html">IT and e-commerce</a>
                         <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work
                             distracts you from doing business. But there is not much work to do to hire an in-house
                             lawyer.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-2.svg" alt="picture">
-                        <a href="#">Comprehensive daily legal support</a>
+                        <a href="../html/services-entry.html">Comprehensive daily legal support</a>
                         <p>In addition, over time, the work will become the same type and uninteresting for a full-time
                             lawyer. And we know very well how difficult it is to find a good candidate with experience
                             in the field of information technology in Ukraine.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-3.svg" alt="picture">
-                        <a href="#">Structuring corporate relationships</a>
+                        <a href="../html/services-entry.html">Structuring corporate relationships</a>
                         <p>Instead of just providing legal services, we will hire a lawyer or a whole team that will fit
                             into the daily life of your company.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-4.svg" alt="picture">
-                        <a href="#">Building contractual relations</a>
+                        <a href="../html/services-entry.html">Building contractual relations</a>
                         <p>Once a week, or week after month, you have your own lawyer by your side. Anyone in the
                             company can catch it at the coffee maker and just talk about current affairs instead of
                             waiting for update status.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-5.svg" alt="picture">
-                        <a href="#">Protection of business, intellectual property</a>
+                        <a href="../html/services-entry.html">Protection of business, intellectual property</a>
                         <p>And all the other time he will work on new diverse projects, so he will definitely not stop
                             in professional development. One way or another, all Axon Partners will work for you instead
                             of a corporate lawyer.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="../assets/img/our-services/icon-6.svg" alt="picture">
-                        <a href="#">Judicial representation</a>
+                        <a href="../html/services-entry.html">Judicial representation</a>
                         <p>Is it a small, medium-sized company or a market leader? Local business or multinational
                             company? Do you have your own legal department or not?</p>
                     </div>
