--- a/html/team-all.html
+++ b/html/team-all.html
@@ -53,7 +53,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="../index.html" target="_blank">
+                    <a class="navbar-brand" href="../index.html" target="_self">
                         <img class="img-fluid logo-shadow" src="../assets/img/about-us/logo_about-us.png" alt="logo-top"
                              title="logo-brand">
                         <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
@@ -118,9 +118,7 @@
                     <img src="../assets/img/team/Evgeny.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <a class="team-info__personal-info-name">
-<!--                               href="../html/team-person-1.html"-->
-                            Евгений Патриков</a>
+                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Евгений Патриков</a>
                             <p class="team-info__personal-info-post">Equity partner, Attorney-at-law</p>
                         </div>
                         <a class="team-info__ellipse d-flex"  href="../html/team-person-1.html">
@@ -134,10 +132,10 @@
                     <img src="../assets/img/team/Vladislav.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <p class="team-info__personal-info-name">Vladislav Melnik</p>
+                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Vladislav Melnik</a>
                             <p class="team-info__personal-info-post">Associate</p>
                         </div>
-                        <a class="team-info__ellipse d-flex" href="#">
+                        <a class="team-info__ellipse d-flex" href="../html/team-person-1.html">
                             <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                             </svg>
@@ -148,10 +146,10 @@
                     <img src="../assets/img/team/Sergey.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <p class="team-info__personal-info-name">Sergey Binn</p>
+                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Sergey Binn</a>
                             <p class="team-info__personal-info-post">Associate</p>
                         </div>
-                        <a class="team-info__ellipse d-flex" href="#">
+                        <a class="team-info__ellipse d-flex" href="../html/team-person-1.html">
                             <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                             </svg>
@@ -162,10 +160,10 @@
                     <img src="../assets/img/team/Oksana.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <p class="team-info__personal-info-name">Oksana Kobzar</p>
+                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Oksana Kobzar</a>
                             <p class="team-info__personal-info-post">Equity partner, Attorney-at-law</p>
                         </div>
-                        <a class="team-info__ellipse d-flex" href="#">
+                        <a class="team-info__ellipse d-flex" href="../html/team-person-1.html">
                             <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                             </svg>
@@ -176,10 +174,10 @@
                     <img src="../assets/img/team/Julia.png" alt="picture-team">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="team-info__personal-info">
-                            <p class="team-info__personal-info-name">Julia Wolk</p>
+                            <a class="team-info__personal-info-name" href="../html/team-person-1.html">Julia Wolk</a>
                             <p class="team-info__personal-info-post">Associate, Attorney-at-law</p>
                         </div>
-                        <a class="team-info__ellipse d-flex" href="#">
+                        <a class="team-info__ellipse d-flex" href="../html/team-person-1.html">
                             <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
                             </svg>
