--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="header__navigation">
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="./index.html" target="_blank">
+                    <a class="navbar-brand" href="./index.html" target="_self">
                         <img class="img-fluid logo-shadow" src="assets/img/Logo.svg" alt="logo-top">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -176,7 +176,7 @@
         <section class="our-service">
             <div class="container">
                 <div class="our-service__description">
-                    <a href="#">
+                    <a href="html/services-entry.html">
                         Services
                         <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
@@ -187,41 +187,41 @@
                 <div class="row our-service__info-columns">
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-1.svg" alt="picture">
-                        <a href="#">IT and e-commerce</a>
+                        <a href="html/services-entry.html">IT and e-commerce</a>
                         <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work
                             distracts you from doing business. But there is not much work to do to hire an in-house
                             lawyer.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-2.svg" alt="picture">
-                        <a href="#">Comprehensive daily legal support</a>
+                        <a href="html/services-entry.html">Comprehensive daily legal support</a>
                         <p>In addition, over time, the work will become the same type and uninteresting for a full-time
                             lawyer. And we know very well how difficult it is to find a good candidate with experience
                             in the field of information technology in Ukraine.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-3.svg" alt="picture">
-                        <a href="#">Structuring corporate relationships</a>
+                        <a href="html/services-entry.html">Structuring corporate relationships</a>
                         <p>Instead of just providing legal services, we will hire a lawyer or a whole team that will fit
                             into the daily life of your company.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-4.svg" alt="picture">
-                        <a href="#">Building contractual relations</a>
+                        <a href="html/services-entry.html">Building contractual relations</a>
                         <p>Once a week, or week after month, you have your own lawyer by your side. Anyone in the
                             company can catch it at the coffee maker and just talk about current affairs instead of
                             waiting for update status.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-5.svg" alt="picture">
-                        <a href="#">Protection of business, intellectual property</a>
+                        <a href="html/services-entry.html">Protection of business, intellectual property</a>
                         <p>And all the other time he will work on new diverse projects, so he will definitely not stop
                             in professional development. One way or another, all Axon Partners will work for you instead
                             of a corporate lawyer.</p>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 our-service__wrap">
                         <img src="assets/img/our-services/icon-6.svg" alt="picture">
-                        <a href="#">Judicial representation</a>
+                        <a href="html/services-entry.html">Judicial representation</a>
                         <p>Is it a small, medium-sized company or a market leader? Local business or multinational
                             company? Do you have your own legal department or not?</p>
                     </div>
@@ -246,7 +246,7 @@
                             <div class="photo-team photo-team-1"></div>
                         </div>
                         <div class="carousel-team__inner-info col">
-                            <a href="#">
+                            <a href="html/team-all.html">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -266,7 +266,7 @@
                             <div class="photo-team photo-team-2"></div>
                         </div>
                         <div class="  carousel-team__inner-info col">
-                            <a href="#">
+                            <a href="html/team-all.html">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -285,7 +285,7 @@
                             <div class="photo-team photo-team-3"></div>
                         </div>
                         <div class=" carousel-team__inner-info col">
-                            <a href="#">
+                            <a href="html/team-all.html">
                                 Команда
                                 <svg width="8" height="12" viewBox="0 0 8 11" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -359,7 +359,7 @@
     <section class="articles">
         <div class="container-lg">
             <div class="articles__heading">
-                <a href="#" class="articles__heading-link">
+                <a href="html/publication.html" class="articles__heading-link">
                     publications
                     <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
@@ -373,8 +373,10 @@
                         <div class="image image-publication-1"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Equity associate</h4>
+
+                        <a class="articles__wrapper-card-wrap-title" href="html/publication.html">Equity associate</a>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
+
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">I'm a jun on projects. I am a co-owner of a law
                             firm. How it happened. Before entering my
@@ -387,9 +389,9 @@
                         <div class="image image-publication-2"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Penalty for the Good Corporation: what will happen
+                        <a class="articles__wrapper-card-wrap-title" href="html/publication.html">Penalty for the Good Corporation: what will happen
                             to Google and others for violating the
-                            GDPR</h4>
+                            GDPR</a>
                         <p class="articles__wrapper-card-wrap-data">September 29</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">And why the recovery of 50 million euros could be a
@@ -402,7 +404,7 @@
                         <div class="image image-publication-3"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
+                        <a class="articles__wrapper-card-wrap-title" href="html/publication.html">Millennial Testament</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
