add html publication and other

--- a/html/publication.html
+++ b/html/publication.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage</title>
+    <title>Publication</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="stylesheet" href="../css/publication.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
 </head>
 <body>
@@ -54,7 +54,10 @@
             <nav class="navbar navbar-expand-md ">
                 <div class="container-lg">
                     <a class="navbar-brand" href="../index.html" target="_self">
-                        <img class="img-fluid logo-shadow" src="../assets/img/Logo.svg" alt="logo-top">
+                        <img class="img-fluid logo-shadow" src="../assets/img/about-us/logo_about-us.png"
+                             alt="logo-top">
+                        <img class="img-fluid slash-nav" src="../assets/img/about-us/slash.svg" alt="slash">
+                        <span class="navbar-brand-way">Publications</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -108,7 +111,8 @@
                     </div>
                     <div class="articles__wrapper-card-wrap">
 
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity associate</a>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity
+                            associate</a>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
 
                         <hr class="articles__wrapper-card-wrap-line">
@@ -123,7 +127,8 @@
                         <div class="image image-publication-2"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the Good Corporation: what will happen
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the
+                            Good Corporation: what will happen
                             to Google and others for violating the
                             GDPR</a>
                         <p class="articles__wrapper-card-wrap-data">September 29</p>
@@ -138,7 +143,8 @@
                         <div class="image image-publication-3"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial Testament</a>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial
+                            Testament</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
@@ -146,7 +152,49 @@
                             legacy of the Ukrainian generation X looks like this: an apartment in…</p>
                     </div>
                 </div>
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-4"></div>
+                    </div>
+                    <div class="articles__wrapper-card-wrap">
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Language Law: How
+                            to Make Your Website Relevant</a>
+                        <p class="articles__wrapper-card-wrap-data">August 19</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">Natalia Kyryk, head of content studio Wordfactory.ua
+                            First, it's beautiful! This is the number one argument in favor of the Ukrainian-language
+                            site. Secondly, it is effective. IN…</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-photo">
+                        <div class="image image-publication-5"></div>
+                    </div>
+                    <div class="articles__wrapper-card-wrap">
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Reimbursement of
+                            the child's tuition fees in kindergarten and school</a>
+                        <p class="articles__wrapper-card-wrap-data">February 5, 2018</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">What we are talking about In June this year, the
+                            Verkhovna Rada amended the Tax Code of Ukraine. From now on, parents who receive an
+                            official…</p>
+                    </div>
+                </div>
+                <div class="articles__wrapper-card">
+                    <div class="articles__wrapper-card-wrap">
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Currency control is
+                            dead, long live currency control!</a>
+                        <p class="articles__wrapper-card-wrap-data">June 14, 2018</p>
+                        <hr class="articles__wrapper-card-wrap-line">
+                        <p class="articles__wrapper-card-wrap-text">Experts hold conferences, round tables and other
+                            events on "liberalization of currency legislation." Lawyers-experts-novelists rub their
+                            fingers about "ctrl + c / ctrl + v".</p>
+                    </div>
+                </div>
             </div>
+            <button class="btn">
+
+            </button>
         </div>
     </section>
 </main>
