--- a/html/team-person-1.html
+++ b/html/team-person-1.html
@@ -96,7 +96,7 @@
     <section class="first-person">
         <div class="container-lg">
             <div class="first-person__wrapper d-flex">
-                <img class="first-person__img" src="../assets/img/team/Alexander.png" alt="picture team">
+                <img class="first-person__img" src="../assets/img/team/Oksana.png" alt="picture team">
                 <div class="first-person__inner-wrapper">
                     <div class="first-person__info-link d-flex">
                         <h2 class="first-person__name">Oksana Kobzar</h2>
