--- a/html/publication-more.html
+++ b/html/publication-more.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Publication</title>
+    <title>Publication-more</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/publication.css">
     <link rel="shortcut icon" href="../assets/img/h.svg" type="image/svg">
@@ -93,22 +93,103 @@
     </div>
 </header>
 <main>
+    <section class="publication-more">
+        <div class="container-small">
+            <div class="publication-more__wrap-picture">
+                <div class="image publication-more__picture-gdpr"></div>
+            </div>
+            <div class="publication-more__wrapper">
+                <h2 class="publication-more__wrapper-title">Penalty for the Good Corporation: what will happen to Google
+                    and others for
+                    violating the GDPR</h2>
+                <p class="publication-more__wrapper-data">September 29</p>
+                <hr class="grey-line">
+                <p class="publication-more__wrapper-text">On January 21, the French National Data Protection
+                    Commission (CNIL) announced on its website that it had fined Google for violating the EU's General
+                    Data Protection Regulation (GDPR). It took six months for the EU countries to make a quality
+                    level-up in the amount of fines for non-compliance with this standard. Prior to that, the fine was
+                    mainly € 20,000-30,000, with the largest fine amounting to € 400,000 and related to a hospital in
+                    Portugal. But this precedent is interesting not so much the amount of the fine as the rigidity of
+                    the regulator's approaches. Denis Beregovyi, Axon Partners, explains why, especially for Mind.
+                    For what? The group complaints against Google arrived at CNIL on the same day that the GDPR came
+                    into force. The complainants reported that Google processed users' personal data without due cause,
+                    in particular to create personalized advertising offers.</p>
+                <h3 class="publication-more__wrapper-title publication-more__wrapper-gradient">To the attention of
+                    Ukrainian security officers:
+                    the inspection was conducted online, without
+                    searches, without seizure of servers or other visible interference for business. And so it was
+                    possible.</h3>
+                <h4 class="publication-more__wrapper-title publication-more__wrapper-title-sm">
+                    According to the results of CNIL inspections revealed violations of two requirements of the GDPR:
+                </h4>
+                <ol>
+                    <li>Transparency and awareness of users about the processing of personal data.</li>
+                    <li>Lack of proper user consent for the processing of personal data for the purpose of personalizing
+                        advertising.
+                    </li>
+                </ol>
+                <p class="publication-more__wrapper-text">In the case of personalization of advertising, Google was sure
+                    to obtain the
+                    consent of users,
+                    because, firstly, when creating Google accounts, the user agrees to the Privacy Policy, and
+                    secondly, Google has a section "Ads personalization", where you can disable this feature.</p>
+                <div class="publication-more__img-wrapper">
+                    <img src="../assets/img/publication/google-account.png" alt="">
+                    <p class="publication-more__wrapper-text-sm">This is what the ad personalization settings window in
+                        your
+                        Google Account
+                        looks like</p>
+                </div>
+                <p class="publication-more__wrapper-text">However, CNIL does not think so, because the information about
+                    the
+                    personalization of advertising is
+                    not clear enough to users. As an example, the Commission claims that the relevant "Personalization"
+                    window does not contain information on the full range of Google services that collect and process
+                    personal data for this purpose (YouTube, Google search, Play Store, Google pictures, Gmail, etc.).
+                    ), and therefore, the user cannot realize to what extent the data is used and how exactly they can
+                    be combined.</p>
+                <h3 class="publication-more__wrapper-title publication-more__wrapper-title-sm">So, let's walk through
+                    the
+                    text of the CNIL
+                    decision</h3>
+                <p class="publication-more__wrapper-text">Why France and not Ireland. Google operates in Europe through
+                    a
+                    legal entity
+                    in Ireland. But the case
+                    was not initiated by the Irish, but by the French regulator. This is why it happened.
+                    <br>
+                    <br>
+                    If data processing decisions are taken anywhere outside the EU, there is a one-stop mechanism -
+                    where the complaint is received, the body considers it. Because Google's data processing center is
+                    located in the United States and the complaint was first received in France, CNIL considered it.</p>
+                <hr class="grey-line">
+                <div class="publication-more__wrapper-social">
+                    <a href="http://www.facebook.com">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M22.6755 0H1.3245C0.5925 0 0 0.5925 0 1.3245V22.6755C0 23.4075 0.5925 24 1.3245 24H12.819V14.706H9.69V11.085H12.819V8.4105C12.819 5.3115 14.712 3.6255 17.478 3.6255C18.8025 3.6255 19.941 3.7215 20.2725 3.7665V7.0065H18.3525C16.8525 7.0065 16.56 7.7265 16.56 8.7765V11.0865H20.145L19.68 14.7165H16.56V24H22.6755C23.4075 24 24 23.4075 24 22.6755V1.3245C24 0.5925 23.4075 0 22.6755 0Z"
+                                  fill="#435695"/>
+                        </svg>
+                    </a>
+                    <a href="http://www.telegram.com">
+                        <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 16.9414L7.5 12.4414L24 0.441406L0.932997 9.31241C0.932997 9.31241 -0.0750025 9.65741 0.00449746 10.2949C0.0839975 10.9324 0.907497 11.2234 0.907497 11.2234L6.27 13.0279L8.7 20.7589L12.813 17.1424L12.8025 17.1349L18.213 21.2839C19.6725 21.9214 20.2035 20.5939 20.2035 20.5939L24 0.441406L9 16.9414Z"
+                                  fill="#3CACDC"/>
+                        </svg>
+                    </a>
+                    <a href="http://www.linkedin.com">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M3.6 9H7.2V20.4H3.6V9ZM5.4 3.3C6.6 3.3 7.5 4.2 7.5 5.4C7.35 6.45 6.45 7.5 5.4 7.5C4.2 7.5 3.3 6.45 3.3 5.4C3.3 4.2 4.2 3.3 5.4 3.3ZM9.3 9H12.75V10.5C13.5 9.3 14.85 8.7 16.2 8.7C19.8 8.7 20.4 11.1 20.4 14.1V20.4H16.8V14.85C16.8 13.5 16.8 11.85 15 11.85C13.2 11.85 12.9 13.35 12.9 14.85V20.55H9.3V9ZM19.5 0H4.5C1.5 0 0 1.5 0 4.5V19.5C0 22.5 1.5 24 4.5 24H19.5C22.5 24 24 22.5 24 19.5V4.5C24 1.5 22.5 0 19.5 0Z"
+                                  fill="#1178B3"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="articles">
         <div class="container-lg">
-
-            <div class="articles__top-btn">
-                <label>
-                    <input name="articles-btn" value="news" type="radio">
-                    <span>news</span>
-                </label>
-                <label>
-                    <input checked name="articles-btn" value="articles" type="radio">
-                    <span>articles</span>
-                </label>
-            </div>
-
             <div class="articles__heading">
-                <a href="#" class="articles__heading-link">
+                <a href="../html/publication.html" class="articles__heading-link">
                     publications
                     <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
@@ -123,8 +204,7 @@
                     </div>
                     <div class="articles__wrapper-card-wrap">
 
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity
-                            associate</a>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity associate</a>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
 
                         <hr class="articles__wrapper-card-wrap-line">
@@ -139,8 +219,7 @@
                         <div class="image image-publication-2"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the
-                            Good Corporation: what will happen
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the Good Corporation: what will happen
                             to Google and others for violating the
                             GDPR</a>
                         <p class="articles__wrapper-card-wrap-data">September 29</p>
@@ -155,8 +234,7 @@
                         <div class="image image-publication-3"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial
-                            Testament</a>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial Testament</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
@@ -164,48 +242,6 @@
                             legacy of the Ukrainian generation X looks like this: an apartment in…</p>
                     </div>
                 </div>
-                <div class="articles__wrapper-card">
-                    <div class="articles__wrapper-card-photo">
-                        <div class="image image-publication-4"></div>
-                    </div>
-                    <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Language Law: How
-                            to Make Your Website Relevant</a>
-                        <p class="articles__wrapper-card-wrap-data">August 19</p>
-                        <hr class="articles__wrapper-card-wrap-line">
-                        <p class="articles__wrapper-card-wrap-text">Natalia Kyryk, head of content studio Wordfactory.ua
-                            First, it's beautiful! This is the number one argument in favor of the Ukrainian-language
-                            site. Secondly, it is effective. IN…</p>
-                    </div>
-                </div>
-                <div class="articles__wrapper-card">
-                    <div class="articles__wrapper-card-photo">
-                        <div class="image image-publication-5"></div>
-                    </div>
-                    <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Reimbursement of
-                            the child's tuition fees in kindergarten and school</a>
-                        <p class="articles__wrapper-card-wrap-data">February 5, 2018</p>
-                        <hr class="articles__wrapper-card-wrap-line">
-                        <p class="articles__wrapper-card-wrap-text">What we are talking about In June this year, the
-                            Verkhovna Rada amended the Tax Code of Ukraine. From now on, parents who receive an
-                            official…</p>
-                    </div>
-                </div>
-                <div class="articles__wrapper-card">
-                    <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Currency control is
-                            dead, long live currency control!</a>
-                        <p class="articles__wrapper-card-wrap-data">June 14, 2018</p>
-                        <hr class="articles__wrapper-card-wrap-line">
-                        <p class="articles__wrapper-card-wrap-text">Experts hold conferences, round tables and other
-                            events on "liberalization of currency legislation." Lawyers-experts-novelists rub their
-                            fingers about "ctrl + c / ctrl + v".</p>
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex d-center">
-                <a class="btn articles__btn" href="../html/publication-more.html">More publications</a>
             </div>
         </div>
     </section>
