--- a/html/services-entry.html
+++ b/html/services-entry.html
@@ -162,7 +162,7 @@
                         <div class="image image-publication-1"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Equity associate</h4>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity associate</a>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">I'm a jun on projects. I am a co-owner of a law
@@ -176,9 +176,9 @@
                         <div class="image image-publication-2"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Penalty for the Good Corporation: what will happen
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the Good Corporation: what will happen
                             to Google and others for violating the
-                            GDPR</h4>
+                            GDPR</a>
                         <p class="articles__wrapper-card-wrap-data">September 29</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">And why the recovery of 50 million euros could be a
@@ -191,7 +191,7 @@
                         <div class="image image-publication-3"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <h4 class="articles__wrapper-card-wrap-title">Millennial Testament</h4>
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial Testament</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
                         <p class="articles__wrapper-card-wrap-text">What and how modern vloggers, opinion leaders and
