--- a/html/publication.html
+++ b/html/publication.html
@@ -95,7 +95,6 @@
 <main>
     <section class="articles">
         <div class="container-lg">
-
             <div class="articles__top-btn">
                 <label>
                     <input name="articles-btn" value="news" type="radio">
@@ -106,7 +105,6 @@
                     <span>articles</span>
                 </label>
             </div>
-
             <div class="articles__heading">
                 <a href="#" class="articles__heading-link">
                     publications
@@ -123,7 +121,7 @@
                     </div>
                     <div class="articles__wrapper-card-wrap">
 
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Equity
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Equity
                             associate</a>
                         <p class="articles__wrapper-card-wrap-data">April 22</p>
 
@@ -139,7 +137,7 @@
                         <div class="image image-publication-2"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Penalty for the
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Penalty for the
                             Good Corporation: what will happen
                             to Google and others for violating the
                             GDPR</a>
@@ -155,7 +153,7 @@
                         <div class="image image-publication-3"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Millennial
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Millennial
                             Testament</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
@@ -169,7 +167,7 @@
                         <div class="image image-publication-4"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Language Law: How
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Language Law: How
                             to Make Your Website Relevant</a>
                         <p class="articles__wrapper-card-wrap-data">August 19</p>
                         <hr class="articles__wrapper-card-wrap-line">
@@ -183,7 +181,7 @@
                         <div class="image image-publication-5"></div>
                     </div>
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Reimbursement of
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Reimbursement of
                             the child's tuition fees in kindergarten and school</a>
                         <p class="articles__wrapper-card-wrap-data">February 5, 2018</p>
                         <hr class="articles__wrapper-card-wrap-line">
@@ -194,7 +192,7 @@
                 </div>
                 <div class="articles__wrapper-card">
                     <div class="articles__wrapper-card-wrap">
-                        <a class="articles__wrapper-card-wrap-title" href="../html/publication.html">Currency control is
+                        <a class="articles__wrapper-card-wrap-title" href="../html/publication-more.html">Currency control is
                             dead, long live currency control!</a>
                         <p class="articles__wrapper-card-wrap-data">June 14, 2018</p>
                         <hr class="articles__wrapper-card-wrap-line">
@@ -204,7 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex d-center">
+            <div class="d-flex d-center articles__btn-wrapper">
                 <a class="btn articles__btn" href="../html/publication-more.html">More publications</a>
             </div>
         </div>
