--- a/html/services-entry.html
+++ b/html/services-entry.html
@@ -148,7 +148,7 @@
     <section class="articles">
         <div class="container-lg">
             <div class="articles__heading">
-                <a href="#" class="articles__heading-link">
+                <a href="../html/publication.html" class="articles__heading-link">
                     publications
                     <svg width="8" height="12" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.5 1L6 5.5L1.5 10" stroke="#24A3FF" stroke-width="2"/>
